Ristruttura la gestione delle collezioni e dei documenti: modifica il nome delle variabili per una maggiore chiarezza, implementa la gestione delle eccezioni durante il parsing JSON e aggiungi il metodo Increment per aggiornare i valori. Aggiorna le statistiche di sistema utilizzando il nuovo metodo Increment.